# bukoai

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CLEANUP_REPORT.md  COLOR_ACCESSIBILITY_REPORT.md  DASHBOARD_DATA_INFO.md  DESIGN_SYSTEM_COLORS.md  Dockerfile  ESTADO_APLICACION.md  EXPORT_IMPLEMENTATION.md  LICENSE  MANUAL_USUARIO.md  MONITOREO_MULTICHUNK_REAL.md  Makefile  README.md  SOLUCION_ERRORES_IDE.md  analyze_book.py  app.py  app_simple.py  buko-ai-prompt.md  check_api_response.py  cookies.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  export_book_content.py  extract_raw_content.py  fix_architecture.py  fix_ide_errors.py  main.py  professional_commercial_ebook.docx  pyproject.toml  requirements.txt  run.py  setup_environment.sh  test_architecture_inclusion.py  (+11 more)
app/: __init__.py
app/forms/: __init__.py  auth.py
app/models/: __init__.py  base.py  book_generation.py  email_template.py  subscription.py  system_log.py  user.py
app/routes/: admin.py  api.py  api_analytics.py  api_real.py  api_simple.py  auth.py  books.py  main.py  websocket.py
app/routes/api_temp/: books.py  stats.py
app/services/: book_formatting_service.py  book_postprocessor.py  cache_service.py  claude_service.py  claude_service_coherence.py  email_service.py  export_service.py  html_to_docx_service.py  markdown_to_html_service.py  professional_formatting_service.py
app/static/css/: ebook-professional.css  main.css
app/static/js/: ebook-navigation.js  kindle-basic.js  kindle-reader-plugin.js  kindle-simple.js  kindle-ultra-basic.js  main.js  ultra-realistic-kindle.js
app/tasks/: __init__.py  book_generation.py  cleanup_tasks.py  email_tasks.py  payment_tasks.py
app/templates/: dashboard.html  dashboard_compact.html  index.html
app/templates/auth/: change_password.html  delete_account.html  login.html  password_reset.html  password_reset_request.html  profile.html  register.html  resend_verification.html
app/templates/books/: architecture_help.html  formatting_viewer.html  formatting_viewer_professional.html  generate.html  generation_status.html  kindle_plugin_demo.html  my_books.html  review_architecture.html  view_book.html  view_book_compact.html
app/templates/components/: alert.html  form_field.html
app/templates/emails/: base.html  book_completion.html  book_completion.txt  email_verification.html  email_verification.txt  notification.html  notification.txt  password_reset.html  password_reset.txt  subscription_change.html  subscription_change.txt  welcome.html  welcome.txt
app/templates/layouts/: base.html
app/utils/: cache_manager.py  decorators.py  file_generation.py  log_config.py  logging.py  page_calculations.py  retry.py  structured_logging.py  validators.py
book_34_extracted_content/: README.md  book_content.md  metadata.json
config/: __init__.py  base.py  development.py  production.py  staging.py  subscription_plans.py  testing.py
docker/: docker-help.sh  entrypoint-celery.sh  entrypoint-flower.sh  entrypoint.sh
docker/nginx/: .htpasswd  nginx-dev.conf  nginx.prod.conf
docker/postgres/: init.sql
docs/: optimizaciones_10k_usuarios.md
logs/: buko-ai-dev.log.1  buko-ai-dev.log.2  buko-ai.log.1  structured.jsonl  structured.jsonl.1  structured.jsonl.2
scripts/: celery_health_check.py  cleanup_incomplete_books.py  cleanup_unused_files.py  delete_all_books.py  fix_book_status.py  init_db.py  install.bat  install.sh  manual_cleanup.py  monitor_book.py  process_book_manually.py  start-dev.sh  start-prod.sh  test.sh  test_10k_users_system.sh  test_book_generation_flow.py  test_export_service.py  verify_10k_users_setup.py
